# excelproject

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  dbridge.pro  qsqlite3.pri
.claude/skills/codex-code-review/: SKILL.md
.codex/skills/codex-code-review/: SKILL.md
docs/adr/: 0001-time-format-in-profile.md  0002-export-column-order-in-exportspec.md  0003-export-reverse-lookup.md  0004-explicit-temporal-type.md
docs/validation/: row-to-multitable.md
examples/: CMakeLists.txt
examples/cli/: CMakeLists.txt  dbridge-cli.pro  main.cpp
examples/diff-demo/: CMakeLists.txt  diff-demo.pro  main.cpp
examples/sync-demo/: CMakeLists.txt  main.cpp  sync-demo.pro  udp_transport.cpp  udp_transport.h
examples/sync-suite/: CMakeLists.txt  CompareDetailDialog.cpp  CompareDetailDialog.h  MainWindow.cpp  MainWindow.h  README.md  Scenario1Runner.cpp  Scenario1Runner.h  Scenario1Widget.cpp  Scenario1Widget.h  Scenario2Model.cpp  Scenario2Model.h  Scenario2SnapshotService.cpp  Scenario2SnapshotService.h  Scenario2Widget.cpp  Scenario2Widget.h  main.cpp  sync-suite.pro
include/dbridge/: DataBridge.h  Errors.h  IBatchTransfer.h  RowPayload.h  SchemaInfo.h  Types.h
include/dbridge/sync/: IComparisonSession.h  ISyncEngine.h  SyncConfig.h  SyncSelection.h  SyncTypes.h
openspec/specs/export-column-order/: spec.md
openspec/specs/export-reverse-lookup/: spec.md
openspec/specs/fk-injection/: spec.md
openspec/specs/row-lookup/: spec.md
openspec/specs/time-format/: spec.md
specs/: MVP-Qt-SQLite-Excel-批量导入导出-实现设计.md  QSQLITE-Session插件集成-无main场景方案.md  Qt-SQLite-Excel-批量导入导出-实现文档.md  Qt-SQLite-Excel-批量导入导出-设计文档.md  Qt-SQLite-Excel-批量导入导出参考.md  SQLite-同步工具-impl-review.md  SQLite-同步工具-plan.md  SQLite-同步工具-test-plan.md  SQLite-同步工具-设计文档.md  SQLite-同步工具-需求文档.md  SQLite-同步工具开源项目参考.md  SQLite-同步工具深度研究报告.md  同步引擎实现深度评审.md  拆包和组包文档-plan.md  拆包和组包文档-test-plan.md  拆包和组包设计文档.md  长期架构演进-Qt-SQLite-Excel-批量导入导出.md
src/: DataBridge.cpp  DataBridgePrivate.h  libdbridge.pro
src/batch/: BatchTransfer.cpp  BatchTransfer.h
src/excel/: ExcelReader.cpp  ExcelReader.h  ExcelWriter.cpp  ExcelWriter.h
src/mapping/: BatchUniqueness.cpp  BatchUniqueness.h  FkInjector.cpp  FkInjector.h  Mapper.cpp  Mapper.h  Router.cpp  Router.h  RowPayload.h  TemporalConvert.cpp  TemporalConvert.h  TopoSorter.cpp  TopoSorter.h
src/profile/: AutoProfileBuilder.cpp  AutoProfileBuilder.h  ProfileLoader.cpp  ProfileLoader.h  ProfileSpec.h  ProfileValidator.cpp  ProfileValidator.h
src/schema/: SchemaCatalog.h  SchemaIntrospector.cpp  SchemaIntrospector.h
src/service/: ErrorCollector.cpp  ErrorCollector.h  ExportHelpers.h  ExportService.cpp  ExportService.h  ImportService.cpp  ImportService.h
src/sql/: SqlBuilder.cpp  SqlBuilder.h
src/sync/: ForegroundGate.h  SyncContext.cpp  SyncContext.h  SyncDDL.h  SyncEngine.cpp  SyncEngine.h  SyncWorker.cpp  SyncWorker.h  WriteTxn.cpp  WriteTxn.h
src/sync/anchor/: OutboundAckStore.cpp  OutboundAckStore.h
src/sync/apply/: AppliedVectorStore.cpp  AppliedVectorStore.h  CapturedWriteTemplate.cpp  CapturedWriteTemplate.h  ChangesetApplier.cpp  ChangesetApplier.h  RowWinnerStore.cpp  RowWinnerStore.h  SelectionPushApplier.cpp  SelectionPushApplier.h  UpsertExecutor.cpp  UpsertExecutor.h
src/sync/baseline/: BaselineManager.cpp  BaselineManager.h
src/sync/capture/: ChangelogStore.cpp  ChangelogStore.h  SessionRecorder.cpp  SessionRecorder.h  SqliteHandle.cpp  SqliteHandle.h
src/sync/conflict/: ConflictArbiter.cpp  ConflictArbiter.h  RebaseEngine.cpp  RebaseEngine.h  RoutingTable.cpp  RoutingTable.h
src/sync/diff/: ComparisonSession.cpp  ComparisonSession.h  DiffEngine.cpp  DiffEngine.h  InboundTableGate.cpp  InboundTableGate.h  StagingBuffer.cpp  StagingBuffer.h
src/sync/payload/: PayloadCodec.cpp  PayloadCodec.h
src/sync/peer/: DeadPeerEvictor.cpp  DeadPeerEvictor.h
src/sync/schema/: QuarantineStore.cpp  QuarantineStore.h  SchemaEligibility.cpp  SchemaEligibility.h  SchemaGuard.cpp  SchemaGuard.h  TableStateStore.cpp  TableStateStore.h
src/sync/selection/: ChunkStreamer.cpp  ChunkStreamer.h  ConsistencyCache.cpp  ConsistencyCache.h  FkClosureBuilder.cpp  FkClosureBuilder.h  (+4 more)
src/validation/: ForeignKeyPreflight.cpp  ForeignKeyPreflight.h  ValidatorChain.cpp  ValidatorChain.h  Validators.cpp  Validators.h
tests/: CMakeLists.txt  sync_common.h  test-common.pri  tests.pro
tests/data/profiles/: column_order.json  customer_basic.json  epoch_time.json  mixed_abc.json  mixed_abc_multitable.json  order_m_set.json  reverse_lookup.json  time_formats.json
tests/data/sql/: 01_customer.sql  02_orders.sql  03_mixed.sql  04_mixed_multitable.sql  05_time_formats.sql  06_column_order.sql  07_reverse_lookup.sql  08_epoch_time.sql
tests/data/xlsx/: EpochEvents.xlsx  Events.xlsx  Mixed.xlsx  Orders.xlsx  OrdersColOrder.xlsx  ReverseLookup.xlsx
tests/integration/: tst_import_single.cpp  tst_import_single.pro
tests/unit/: tst_auto_profile_builder.cpp  tst_auto_profile_builder.pro  tst_column_order_export.cpp  tst_column_order_export.pro  tst_databridge_schema.cpp  tst_databridge_schema.pro  tst_export_helpers.cpp  tst_export_helpers.pro  tst_fk_preflight.cpp  tst_fk_preflight.pro  tst_lookup_prefetch.cpp  tst_lookup_prefetch.pro  tst_lookup_semantics.cpp  tst_lookup_semantics.pro  tst_profile_loader.cpp  tst_profile_loader.pro  tst_profile_validator.cpp  tst_profile_validator.pro  tst_reverse_lookup_export.cpp  tst_reverse_lookup_export.pro  tst_router.cpp  tst_router.pro  tst_schema_introspector.cpp  tst_schema_introspector.pro  tst_sql_builder.cpp  tst_sql_builder.pro  tst_sync_applied_vector.cpp  tst_sync_applied_vector.pro  tst_sync_changelog_store.cpp  tst_sync_changelog_store.pro  tst_sync_conflict_arbiter.cpp  tst_sync_conflict_arbiter.pro  tst_sync_consistency_cache.cpp  tst_sync_consistency_cache.pro  tst_sync_dead_peer_evictor.cpp  tst_sync_dead_peer_evictor.pro  tst_sync_foreground_gate.cpp  tst_sync_foreground_gate.pro  tst_sync_inbound_table_gate.cpp  tst_sync_inbound_table_gate.pro  (+34 more)
tools/: build_fixtures.py  xlsx2csv.py
(+30 files in other folders)
